2002-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/GNUmakefile.in: Don't install stepmake.  This breaks
	the use of make/ly.make for use as an external makefile.  Probably
	noone except for myself ever used this anyway.

	* stepmake/stepmake/GNUmakefile (INSTALLATION_DIR): Bugfix: Adapt
	to new $datadir convention (<package>/<version>).

2002-06-13  Han-Wen  <hanwen@cs.uu.nl>
	
	* Document/user/refman.itely: tablature doc and code updates by
	Jean-Baptiste Lamy <jiba@@tuxfamily.org>
	
	* input/template/piano-dynamics.ly: bugfixes.

	* lily/key-engraver.cc (try_music): read request only once. Don't
	overwrite lastKeySignature. Call create_key() only once. This
	fixes a bug with multiple equal key changes on polyphonic staffs.

2002-06-12  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scm/grob-description.scm: Add side-position-interface to TextSpanner

	* scm/grob-property-description.scm: Document the trill line type.

2002-06-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make: 
	* make/lilypond-vars.make:
	* GNUmakefile.in (builddir-setup): New setup for builddir run.
	Fixes LilyPond run from builddir for --srcdir builds.

	* Documentation/windows/GNUmakefile (OUT_PROFILES): Bugfix for
	--srcdir build.

2002-06-12  Han-Wen  <hanwen@cs.uu.nl>

	* scm/grob-description.scm (all-grob-descriptions): add
	font-family to RehearsalMark

	* scm/drums.scm: move over definitions from drum-pitch-init.ly

	* lily/volta-bracket.cc (brew_molecule): bugfix, don't do anything
	if glyph not set.

2002-06-12  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Propose saving before applying a command:
	for saved buffer set default command to LilyPond.

2002-06-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/mutopia-index.py (headertext_nopics): Add missing
	variable.

	* Documentation/windows/lilypond.hint: Renamed (previously setup.hint).

	* Documentation/windows/lilypond-doc.hint: New file.
