@@ -1,3 +1,11 @@
+2002-06-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/spacing-spanner.cc (find_shortest): make 1/8 configurable:
+	introduce base-shortest-duration
+
+	* lily/parser.yy (music_output_def_body): don't crash when \tempo
+	in unexpected \midi{} is found.
+
 2002-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* stepmake/GNUmakefile.in: Don't install stepmake.  This breaks
